ecmascript/parser/tests/typescript-errors/type-only-export-specifier/too-many-as/input.ts.stderr
error: Expected ',', got 'as'
 --> $DIR/tests/typescript-errors/type-only-export-specifier/too-many-as/input.ts:1:24
  |
1 | export { type as as as as }
  |                        ^^

