ecmascript/parser/tests/typescript-errors/type-only-export-specifier/too-many-as/input.ts
export { type as as as as }
